# gordon

./: .gitignore  CMakeLists.txt  README.md  combo.py  live.py  main.cpp  main.py  requirements.txt  transcription.py
gordonpy/: asr.py  config.py  utils.py  vision.py
include/: Application.hpp  ImageUtils.hpp
recordings/: session.txt
src/: ImageUtils.cpp  actions.py  asr.py  audio_io.py  config.py  intents.py  ui.py  vad.py  vision.py
